<resources>
    <string name="app_name">KS8 Mods</string>
    <string name="romname">KING ROM</string>
    <string name="workingversion">THIS VERSION OF ROM CONTROL IS FOR KING OREO ROM V13</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="onallowscreenshot">On, screenshot not allowed</string>
    <string name="offallowscreenshot">Off, screenshot allowed</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">ROM version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"CANCEL\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="systemui_prefs">SystemUI prefs</string>
    <string name="phone_prefs">Phone prefs</string>
    <string name="notification_panel_prefs">Notification panel prefs</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog">Changelog</string>
    <string name="about_us">About us</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description">This action will restore the following items to stock colors</string>
    <string name="systemui">SystemUI</string>
    <string name="statusbar">Statusbar</string>
    <string name="notification_panel">Notification Panel</string>
    <string name="touchwiz">TouchWiz</string>
    <string name="recents">Recent Panel</string>
    <string name="secsetting">Settings</string>
    <string name="phone">Phone</string>
    <string name="framework_prefs">Framework</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="app_links">External Apps</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit"> Do you want to close the app?</string>
    <string name="robotocondensed_regular">RobotoCondensed-Regular</string>
    <string name="King_Rom_Apps">King Rom Apps</string>
    <string name="ks8info">Download Mod and Tweaks for KING ROM</string>
    <string name="minitbatteryinfo">Manage Battery Icon in StatusBar</string>
    <string name="minitclockinfo">Manage Clock Icon in StatusBar</string>
    <string name="otainfo">Manage OTA Updater</string>
    <string name="app_utili">Useful Apps</string>
    <string name="phoneinfo">Info About Phone</string>
    <string name="betterbs">Info about Battery Drain</string>
    <string name="app_upsm">Add more app to UPSM Mode</string>
    <string name="sinapseinfo">Manage Kernel Settings</string>
    <string name="Root_Apps">Root Apps</string>
    <string name="supersuinfo">Manage SU Permissions</string>
    <string name="Sound_Control">Sound Control</string>
    <string name="soundmanager">Set Audio Filter for KING ROM</string>
    <string name="POWER_OFF_TOGGLE">POWER OFF TOGGLE</string>
    <string name="REBOOT_TOGGLE">REBOOT TOGGLE</string>
    <string name="DOWNLOAD_MODE_TOGGLE">DOWNLOAD TOGGLE</string>
    <string name="QUICKREBOOT_MODE_TOGGLETITLE">QUICKREBOOT TOGGLE (Need KS8 PRO)</string>
    <string name="QUICKREBOOT_MODE_TOGGLE">QUICKREBOOT TOGGLE</string>
    <string name="TORCH_MODE_TOGGLETITLE">TORCH TOGGLE (Need KS8 PRO)</string>
    <string name="TORCH_MODE_TOGGLE">TORCH TOGGLE</string>
    <string name="SCREENRECORD_MODE_TOGGLETITLE">SCREENRECORD TOGGLE (Need KS8 PRO)</string>
    <string name="SCREENRECORD_MODE_TOGGLE">SCREENRECORD TOGGLE</string>
    <string name="SCREENSHOT_MODE_TOGGLETITLE">SCREENSHOT TOGGLE (Need KS8 PRO)</string>
    <string name="SCREENSHOT_MODE_TOGGLE">SCREENSHOT TOGGLE</string>
    <string name="ASSISTENT_MODE_TOGGLETITLE">ASSISTENT TOGGLE (Need KS8 PRO)</string>
    <string name="ASSISTENT_MODE_TOGGLE">ASSISTENT TOGGLE</string>
    <string name="DATA_MODE_TOGGLETITLE">DATA TOGGLE (Need KS8 PRO)</string>
    <string name="DATA_MODE_TOGGLE">DATA TOGGLE</string>
    <string name="FLY_MODE_TOGGLE">FLY TOGGLE</string>
    <string name="MULTIUSERS_MODE_TOGGLE">MULTIUSERS TOGGLE</string>
    <string name="REBOOT_RECOVERY_TOGGLETITLE">REBOOT RECOVERY TOGGLE (Need KS8 PRO)</string>
    <string name="REBOOT_RECOVERY_TOGGLE">REBOOT RECOVERY TOGGLE</string>
    <string name="EMERGENCY_MODE_TOGGLE">TOGGLE EMERGENCY MODE</string>
    <string name="SETTING_TOGGLE">TOGGLE SETTING</string>
    <string name="USBPLUGINTITLE">USB Plug/Unplug WAKE UP (Need KS8 PRO)</string>
    <string name="USBPLUGIN">USB Plug/Unplug WAKE UP</string>
    <string name="USBPLUGINLITE">USB WAKE UP</string>
    <string name="MENUBACK">MENU AND BACK BUTTONS</string>
    <string name="longmenu">Long press Menu button</string>
    <string name="longback">Long press Back button</string>
    <string name="removetask">Remove completed from the taskbar</string>
    <string name="Lockscreen_RotationTitle">Lockscreen Rotation\n(Need KS8 PRO)</string>
    <string name="Lockscreen_Rotation">Lockscreen Rotation</string>
    <string name="Touchwizeffect">Touchwiz transition effect</string>
    <string name="ButtonKeyLight">Button Key Light</string>
    <string name="ButtonKeyLightduration">Keyboard backlight duration</string>
    <string name="callrectitle">Call Recorder in dialer app</string>
    <string name="callrectitle2">Open dialer and click settings</string>
    <string name="callrectitle3">Select Call Rec</string>
    <string name="callrectitle4">Active Auto Call Rec</string>
    <string name="Backgroundcolors">Background colors</string>
    <string name="Expandedviewbackgroundcolor">Expanded view background color</string>
    <string name="Header">Header</string>
    <string name="Searchbarframe">Search bar frame</string>
    <string name="Searchbar">Search bar</string>
    <string name="QuickSettings">Quick Settings</string>
    <string name="Brightnesslider">Brightness slider</string>
    <string name="datausage">Data usage</string>
    <string name="DeviceInfoItems">Device Info Items</string>
    <string name="Devicemodel">Device model</string>
    <string name="Androidversion">Android version</string>
    <string name="Buildversion">Build version</string>
    <string name="Batterylevel">Battery level</string>
    <string name="Networkname">Network name</string>
    <string name="WIFIinfo">WIFI info</string>
    <string name="Nextalarm">Next alarm</string>
    <string name="Deviceuptime">Device up time</string>
    <string name="Carrierlabeltextpreferences">Carrier label text preferences</string>
    <string name="Carrierlabelvisibility">Carrier label visibility</string>
    <string name="Carrierlabeltextcolor">Carrier label text color</string>
    <string name="Carrierlabeltext">Carrier label text</string>
    <string name="Carrierlabeltextcustom">Custom text for carrier label</string>
    <string name="welcome">Welcome on KS8 MODS</string>
    <string name="welcomemsgPRO">Welcome to the KS8 mods, with this app you will able to customize the King Rom S8 Edition,\nAll PRO Features Unlocked,\nTHANKS for your support!!!</string>
    <string name="XDAThread">XDA Thread of KING ROM S8 Edition</string>
    <string name="aboutKS8Rom">Usefull Links for KING ROM</string>
    <string name="latestrom">Latest Version of Rom</string>
    <string name="sourcecoderomcontrol">Source Code KS8 MODS</string>
    <string name="longpresskilltitle">Long press to kill app (Need KS8 PRO)</string>
    <string name="backtokilltitle">Back to kill app (Need KS8 PRO)</string>
    <string name="SkipTracksTitle">Skip Tracks with volume button</string>
    <string name="UseSkipTracksMod">Use Skip Tracks Mod</string>
    <string name="HapticFeedback">Haptic Feedback</string>
    <string name="Doubleclickplay">Double click play/pause</string>
    <string name="LongPressTimeOut">Long Press TimeOut</string>
    <string name="CustomNavbarHighSwitch">Custom Navbar High Switch</string>
    <string name="CustomNavbarHigh">Custom Navbar High</string>
    <string name="CustomNavbarIconColorSwitch">Custom Navbar Icon Color Switch</string>
    <string name="CustomNavbarIconColor">Custom Navbar Icon Color</string>
</resources>