<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- POWER MENU
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/QUICKREBOOT_MODE_TOGGLETITLE" android:enabled="false">
     ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_fast_reboot" android:title="@string/QUICKREBOOT_MODE_TOGGLE" android:key="power_quick_reboot" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/MULTIUSERS_MODE_TOGGLE">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_multiuser" android:title="@string/MULTIUSERS_MODE_TOGGLE" android:key="power_multiuser" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>-->


    <!-- POWER MENU OREO -->
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/POWER_OFF_TOGGLE">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference
            android:icon="@drawable/power" android:title="@string/POWER_OFF_TOGGLE" android:key="poweroff_power_menu" android:defaultValue="true" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/DATA_MODE_TOGGLETITLE" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_data_network_square" android:title="@string/DATA_MODE_TOGGLE" android:key="power_data" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/FLY_MODE_TOGGLE">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_lock_airplane_mode" android:title="@string/FLY_MODE_TOGGLE" android:key="power_airplane" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/REBOOT_TOGGLE">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_restart_square" android:title="@string/REBOOT_TOGGLE" android:key="power_restart" android:defaultValue="true" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/SETTING_TOGGLE">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/ic_settings" android:title="@string/SETTING_TOGGLE" android:key="power_setting" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/REBOOT_RECOVERY_TOGGLETITLE" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/king_recovery" android:title="@string/REBOOT_RECOVERY_TOGGLE" android:key="reboot_recovery" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/DOWNLOAD_MODE_TOGGLE">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_download" android:title="@string/DOWNLOAD_MODE_TOGGLE" android:key="power_download" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/EMERGENCY_MODE_TOGGLE">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/emergency" android:title="@string/EMERGENCY_MODE_TOGGLE" android:key="power_emergency" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/TORCH_MODE_TOGGLETITLE" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_torchlight" android:title="@string/TORCH_MODE_TOGGLE" android:key="power_torch" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/SCREENRECORD_MODE_TOGGLETITLE" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_screen_recorder" android:title="@string/SCREENRECORD_MODE_TOGGLE" android:key="power_record" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/SCREENSHOT_MODE_TOGGLETITLE" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/tw_ic_do_screenshot" android:title="@string/SCREENSHOT_MODE_TOGGLE" android:key="power_screenshot" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/ASSISTENT_MODE_TOGGLETITLE" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/ic_action_assist_focused" android:title="@string/ASSISTENT_MODE_TOGGLE" android:key="power_assist" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>

    <!-- SKIP TRACK -->
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/SkipTracksTitle" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference android:icon="@drawable/music" android:title="@string/UseSkipTracksMod" android:key="skip_tracks" android:defaultValue="false" android:summaryOn="Enabled" android:summaryOff="Disabled" />
        <com.boostermbkking.ks8mods.v2.prefs.MyCheckBoxPreference android:icon="@drawable/vibration" android:title="@string/HapticFeedback" android:key="haptic_feedback_enabled" android:defaultValue="false" android:summaryOn="Enabled" android:summaryOff="Disabled" />
        <com.boostermbkking.ks8mods.v2.prefs.MyCheckBoxPreference android:icon="@drawable/pause" android:title="@string/Doubleclickplay" android:key="doble_click_skip_tracks" android:defaultValue="true" android:summaryOn="Enabled" android:summaryOff="Disabled" android:dependency="skip_tracks"  />
        <com.boostermbkking.ks8mods.v2.prefs.MySeekBarPreference android:title="@string/LongPressTimeOut" android:key="timeout_skip_tracks" android:dependency="skip_tracks" android:defaultValue="600" app:minValue="300" app:maxValue="1300" app:unitsValue="mSec" />
    </PreferenceCategory>

    <!-- SCREEN POLICY -->
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/USBPLUGIN" >
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference
            android:icon="@drawable/usb" android:title="@string/USBPLUGINLITE" android:key="usb_plugged" android:defaultValue="true" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    </PreferenceCategory>

    <!-- BACK TO KILL -->
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="@string/longpresskilltitle" android:enabled="false">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference
            android:title="@string/backtokilltitle" android:key="back_key" android:defaultValue="0" android:summaryOn="On" android:summaryOff="Off" />
    </PreferenceCategory>

    <!-- CUSTOM NAVBAR -->
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="Custom Navbar">
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference
            android:title="@string/CustomNavbarHighSwitch" android:key="navbar_height_switch" android:defaultValue="false" android:summaryOn="enabled" android:summaryOff="disabled" />
        <com.boostermbkking.ks8mods.v2.prefs.MySeekBarPreference
            android:title="@string/CustomNavbarHigh" android:key="navbar_height" android:dependency="navbar_height_switch" android:defaultValue="172" app:maxValue="200" app:minValue="65" app:unitsValue="dp" />
        <com.boostermbkking.ks8mods.v2.prefs.MySwitchPreference
            android:title="@string/CustomNavbarIconColorSwitch" android:key="unlock_navbar_colors" android:defaultValue="false" android:summaryOn="Allow colors to be changed" android:summaryOff="Colors are locked to stock" app:isSilent="false" app:packageNameToKill="com.android.systemui" />
        <com.boostermbkking.ks8mods.v2.prefs.ColorPickerPreference
            android:title="@string/CustomNavbarIconColor" android:key="navbar_icon_color" android:dependency="unlock_navbar_colors" android:defaultValue="\#fffafafa" app:isSilent="false" app:packageNameToKill="com.android.systemui" />
    </PreferenceCategory>
</PreferenceScreen>